samples/_failures_safe/1761642897_c0c9f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb8c68e4.c: In function ‘main’:
./samples/SAFE/__tmp_bb8c68e4.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
